2006-02-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/AsyncBoxView.java
	(ChildState.locator): Removed wrong field.
	(ChildState): Removed initialization of removed field.
	(locator): Changed access modifier to be protected as specified.

2006-02-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/ToolTipManager.java: Removed unneeded imports.
	* javax/swing/Timer.java: Some small reindention.
	(task): Made package private to avoid synthetic accessor method.

2006-02-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/SwingUtilities.java
	(layoutCompoundLabel): Dont set textIconGap to 0 when there is
	no icon.

2006-02-14  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* examples/gnu/classpath/examples/swing/TableDemo.java:
	Making the columns variable width.
	* javax/swing/JTable.java (distributeSpill, doLayout):
	  Call getPreferredSize and not getSize().

2006-02-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/DefaultCellEditor.java
	(DefaultCellEditor): API doc fixlet.

2006-02-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JViewport.java
	(isPaintRoot): New field.
	(repaint): Only call super here. Also added a comment regarding
	the diversion from the JDK.
	(paintBlit): Implemented real blitting.
	(paintImmediately2): New method. Overrides the same package private
	method in JComponent.

2006-02-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTableUI.java
	(paint): Check for boundary cases when determining the painting
	area.

2006-02-14  Mark Wielaard  <mark@klomp.org>

	* java/awt/Menu.java (add): Always set parent of item to this. Call
	addNotify() on item when we have a MenuPeer already.
	(insert): Always adjust parent for item. Call addNotify() on item if
	we already have a peer.
	(remove(int)): Always clear item parent. Call removeNotify() on item
	if we had a peer.

2006-02-14  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JTable.java (rowAtPoint): Return -1 if the computed 